--- a/Append/index.html
+++ b/Append/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <base href="/append/">
   <title>Index - 3 PIONEER</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
